--- a/llm_engineering/week1/day1.ipynb
+++ b/llm_engineering/week1/day1.ipynb
@@ -90,10 +90,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4e2a9393-7767-488e-a8bf-27c12dca35bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/shubham/Desktop/Projects/revisiting-genai/llm_engineering/venv/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# imports\n",
     "\n",
@@ -129,10 +138,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7b87cadb-d513-4303-baee-a37b6f938e4d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "API key found and looks good so far!\n"
+     ]
+    }
+   ],
    "source": [
     "# Load environment variables in a file called .env\n",
     "\n",
@@ -153,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "019974d9-f3ad-4a8a-b5f9-0a3719aea2d3",
    "metadata": {},
    "outputs": [],
@@ -174,10 +191,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a58394bf-1e45-46af-9bfd-01e24da6f49a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! Welcome! I'm glad you're here. How can I assist you today?\n"
+     ]
+    }
+   ],
    "source": [
     "# To give you a preview -- calling OpenAI with these messages is this easy. Any problems, head over to the Troubleshooting notebook.\n",
     "\n",
@@ -196,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c5e793b2-6775-426a-a139-4848291d0463",
    "metadata": {},
    "outputs": [],
@@ -221,15 +246,71 @@
     "        self.title = soup.title.string if soup.title else \"No title found\"\n",
     "        for irrelevant in soup.body([\"script\", \"style\", \"img\", \"input\"]):\n",
     "            irrelevant.decompose()\n",
-    "        self.text = soup.body.get_text(separator=\"\\n\", strip=True)"
+    "        self.text = soup.body.get_text(separator=\"\\n\", strip=True)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2ef960cf-6dc2-4cda-afb3-b38be12f4c97",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Home - Edward Donner\n",
+      "Home\n",
+      "Connect Four\n",
+      "Outsmart\n",
+      "An arena that pits LLMs against each other in a battle of diplomacy and deviousness\n",
+      "About\n",
+      "Posts\n",
+      "Well, hi there.\n",
+      "I’m Ed. I like writing code and experimenting with LLMs, and hopefully you’re here because you do too. I also enjoy DJing (but I’m badly out of practice), amateur electronic music production (\n",
+      "very\n",
+      "amateur) and losing myself in\n",
+      "Hacker News\n",
+      ", nodding my head sagely to things I only half understand.\n",
+      "I’m the co-founder and CTO of\n",
+      "Nebula.io\n",
+      ". We’re applying AI to a field where it can make a massive, positive impact: helping people discover their potential and pursue their reason for being. Recruiters use our product today to source, understand, engage and manage talent. I’m previously the founder and CEO of AI startup untapt,\n",
+      "acquired in 2021\n",
+      ".\n",
+      "We work with groundbreaking, proprietary LLMs verticalized for talent, we’ve\n",
+      "patented\n",
+      "our matching model, and our award-winning platform has happy customers and tons of press coverage.\n",
+      "Connect\n",
+      "with me for more!\n",
+      "January 23, 2025\n",
+      "LLM Workshop – Hands-on with Agents – resources\n",
+      "December 21, 2024\n",
+      "Welcome, SuperDataScientists!\n",
+      "November 13, 2024\n",
+      "Mastering AI and LLM Engineering – Resources\n",
+      "October 16, 2024\n",
+      "From Software Engineer to AI Data Scientist – resources\n",
+      "Navigation\n",
+      "Home\n",
+      "Connect Four\n",
+      "Outsmart\n",
+      "An arena that pits LLMs against each other in a battle of diplomacy and deviousness\n",
+      "About\n",
+      "Posts\n",
+      "Get in touch\n",
+      "ed [at] edwarddonner [dot] com\n",
+      "www.edwarddonner.com\n",
+      "Follow me\n",
+      "LinkedIn\n",
+      "Twitter\n",
+      "Facebook\n",
+      "Subscribe to newsletter\n",
+      "Type your email…\n",
+      "Subscribe\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's try one out. Change the website and add print statements to follow along.\n",
     "\n",
@@ -258,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "abdb8417-c5dc-44bc-9bee-2e059d162699",
    "metadata": {},
    "outputs": [],
@@ -272,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "f0275b1b-7cfe-4f9d-abfa-7650d378da0c",
    "metadata": {},
    "outputs": [],
@@ -290,10 +371,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "26448ec4-5c00-4204-baec-7df91d11ff2e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are looking at a website titled Home - Edward Donner\n",
+      "The contents of this website is as follows; please provide a short summary of this website in markdown. If it includes news or announcements, then summarize these too.\n",
+      "\n",
+      "Home\n",
+      "Connect Four\n",
+      "Outsmart\n",
+      "An arena that pits LLMs against each other in a battle of diplomacy and deviousness\n",
+      "About\n",
+      "Posts\n",
+      "Well, hi there.\n",
+      "I’m Ed. I like writing code and experimenting with LLMs, and hopefully you’re here because you do too. I also enjoy DJing (but I’m badly out of practice), amateur electronic music production (\n",
+      "very\n",
+      "amateur) and losing myself in\n",
+      "Hacker News\n",
+      ", nodding my head sagely to things I only half understand.\n",
+      "I’m the co-founder and CTO of\n",
+      "Nebula.io\n",
+      ". We’re applying AI to a field where it can make a massive, positive impact: helping people discover their potential and pursue their reason for being. Recruiters use our product today to source, understand, engage and manage talent. I’m previously the founder and CEO of AI startup untapt,\n",
+      "acquired in 2021\n",
+      ".\n",
+      "We work with groundbreaking, proprietary LLMs verticalized for talent, we’ve\n",
+      "patented\n",
+      "our matching model, and our award-winning platform has happy customers and tons of press coverage.\n",
+      "Connect\n",
+      "with me for more!\n",
+      "January 23, 2025\n",
+      "LLM Workshop – Hands-on with Agents – resources\n",
+      "December 21, 2024\n",
+      "Welcome, SuperDataScientists!\n",
+      "November 13, 2024\n",
+      "Mastering AI and LLM Engineering – Resources\n",
+      "October 16, 2024\n",
+      "From Software Engineer to AI Data Scientist – resources\n",
+      "Navigation\n",
+      "Home\n",
+      "Connect Four\n",
+      "Outsmart\n",
+      "An arena that pits LLMs against each other in a battle of diplomacy and deviousness\n",
+      "About\n",
+      "Posts\n",
+      "Get in touch\n",
+      "ed [at] edwarddonner [dot] com\n",
+      "www.edwarddonner.com\n",
+      "Follow me\n",
+      "LinkedIn\n",
+      "Twitter\n",
+      "Facebook\n",
+      "Subscribe to newsletter\n",
+      "Type your email…\n",
+      "Subscribe\n"
+     ]
+    }
+   ],
    "source": [
     "print(user_prompt_for(ed))"
    ]
@@ -319,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f25dcd35-0cd0-4235-9f64-ac37ed9eaaa5",
    "metadata": {},
    "outputs": [],
@@ -332,10 +470,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "21ed95c5-7001-47de-a36d-1d6673b403ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oh, you’re really throwing me a curveball with this one! The answer is 4. I hope I didn't just blow your mind with that revelation.\n"
+     ]
+    }
+   ],
    "source": [
     "# To give you a preview -- calling OpenAI with system and user messages:\n",
     "\n",
@@ -353,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "0134dfa4-8299-48b5-b444-f2a8c3403c88",
    "metadata": {},
    "outputs": [],
@@ -369,10 +515,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "36478464-39ee-485c-9f3f-6a4e458dbc9c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'role': 'system',\n",
+       "  'content': 'You are an assistant that analyzes the contents of a website and provides a short summary, ignoring text that might be navigation related. Respond in markdown.'},\n",
+       " {'role': 'user',\n",
+       "  'content': 'You are looking at a website titled Home - Edward Donner\\nThe contents of this website is as follows; please provide a short summary of this website in markdown. If it includes news or announcements, then summarize these too.\\n\\nHome\\nConnect Four\\nOutsmart\\nAn arena that pits LLMs against each other in a battle of diplomacy and deviousness\\nAbout\\nPosts\\nWell, hi there.\\nI’m Ed. I like writing code and experimenting with LLMs, and hopefully you’re here because you do too. I also enjoy DJing (but I’m badly out of practice), amateur electronic music production (\\nvery\\namateur) and losing myself in\\nHacker News\\n, nodding my head sagely to things I only half understand.\\nI’m the co-founder and CTO of\\nNebula.io\\n. We’re applying AI to a field where it can make a massive, positive impact: helping people discover their potential and pursue their reason for being. Recruiters use our product today to source, understand, engage and manage talent. I’m previously the founder and CEO of AI startup untapt,\\nacquired in 2021\\n.\\nWe work with groundbreaking, proprietary LLMs verticalized for talent, we’ve\\npatented\\nour matching model, and our award-winning platform has happy customers and tons of press coverage.\\nConnect\\nwith me for more!\\nJanuary 23, 2025\\nLLM Workshop – Hands-on with Agents – resources\\nDecember 21, 2024\\nWelcome, SuperDataScientists!\\nNovember 13, 2024\\nMastering AI and LLM Engineering – Resources\\nOctober 16, 2024\\nFrom Software Engineer to AI Data Scientist – resources\\nNavigation\\nHome\\nConnect Four\\nOutsmart\\nAn arena that pits LLMs against each other in a battle of diplomacy and deviousness\\nAbout\\nPosts\\nGet in touch\\ned [at] edwarddonner [dot] com\\nwww.edwarddonner.com\\nFollow me\\nLinkedIn\\nTwitter\\nFacebook\\nSubscribe to newsletter\\nType your email…\\nSubscribe'}]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Try this out, and then try for a few more websites\n",
     "\n",
@@ -389,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "905b9919-aba7-45b5-ae65-81b3d1d78e34",
    "metadata": {},
    "outputs": [],
@@ -407,17 +567,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "05e38d41-dfa4-4b20-9c96-c46ea75d9fb5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'# Summary of Edward Donner\\'s Website\\n\\nThe website \"Home - Edward Donner\" is a personal site showcasing Ed Donner\\'s interests in coding, experimentation with large language models (LLMs), and amateur music production. Ed is the co-founder and CTO of Nebula.io, a company focused on leveraging AI to help people discover their potential in the talent domain.\\n\\n## Key Information:\\n\\n- **Professional Background**: \\n  - Co-founder and CTO of Nebula.io, which aids recruiters in managing and understanding talent using proprietary LLMs.\\n  - Former founder and CEO of a previous AI startup, untapt, which was acquired in 2021.\\n\\n- **Interests**: \\n  - Writing code and experimenting with LLMs.\\n  - DJing and electronic music production.\\n\\n## News and Announcements:\\n\\n- **January 23, 2025**: Posted resources for an LLM Workshop focused on \"Hands-on with Agents.\"\\n- **December 21, 2024**: Welcomed \"SuperDataScientists.\"\\n- **November 13, 2024**: Released resources for \"Mastering AI and LLM Engineering.\"\\n- **October 16, 2024**: Shared resources on transitioning from Software Engineer to AI Data Scientist. \\n\\nThe website serves as a platform for Ed to connect with like-minded individuals and promote discussions around AI and LLM technologies.'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "summarize(\"https://edwarddonner.com\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "3d926d59-450e-4609-92ba-2d6f244f1342",
    "metadata": {},
    "outputs": [],
@@ -431,10 +602,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "3018853a-445f-41ff-9560-d925d1774b2f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "# Summary of Edward Donner's Website\n",
+       "\n",
+       "Edward Donner's website serves as a personal platform where he shares his interests in coding, experimenting with large language models (LLMs), and his passion for electronic music. As the co-founder and CTO of Nebula.io, he is involved in leveraging AI to enhance talent discovery and management for recruiters. He previously founded an AI startup, untapt, which was acquired in 2021.\n",
+       "\n",
+       "## Recent Announcements\n",
+       "- **January 23, 2025**: LLM Workshop – Hands-on with Agents – resources\n",
+       "- **December 21, 2024**: Welcome, SuperDataScientists!\n",
+       "- **November 13, 2024**: Mastering AI and LLM Engineering – Resources\n",
+       "- **October 16, 2024**: From Software Engineer to AI Data Scientist – resources\n",
+       "\n",
+       "The site encourages visitors to connect with Ed and follow his work."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display_summary(\"https://edwarddonner.com\")"
    ]
@@ -585,7 +779,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
